--- a/src/Lykke.Job.PayTransactionHandler/Lykke.Job.PayTransactionHandler.csproj
+++ b/src/Lykke.Job.PayTransactionHandler/Lykke.Job.PayTransactionHandler.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lykke.Common" Version="4.0.0" />
+    <PackageReference Include="Lykke.Common" Version="4.2.0" />
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.1.0" />
     <!-- #if azurequeuesub -->
     <PackageReference Include="Lykke.JobTriggers" Version="1.2.0" />
@@ -38,6 +38,7 @@
     <!-- #endif -->
     <!-- #if rabbitpub || rabbitsub -->
     <PackageReference Include="Lykke.RabbitMqBroker" Version="4.3.1" />
+    <PackageReference Include="Lykke.Service.PayInternal.Contract" Version="1.0.2" />
     <!-- #endif -->
     <PackageReference Include="Lykke.SettingsReader" Version="1.1.4" />
     <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="2.0.1" />
