--- a/src/Lykke.Job.PayTransactionHandler.Core/Lykke.Job.PayTransactionHandler.Core.csproj
+++ b/src/Lykke.Job.PayTransactionHandler.Core/Lykke.Job.PayTransactionHandler.Core.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Lykke.Common" Version="4.3.0" />
     <PackageReference Include="Lykke.Service.PayInternal.Client" Version="1.0.12" />
+    <PackageReference Include="Lykke.SettingsReader" Version="1.1.4" />
   </ItemGroup>
 
   <ItemGroup>
