--- a/src/Lykke.Job.PayTransactionHandler.Services/Lykke.Job.PayTransactionHandler.Services.csproj
+++ b/src/Lykke.Job.PayTransactionHandler.Services/Lykke.Job.PayTransactionHandler.Services.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="Lykke.Common" Version="6.1.1" />
+    <PackageReference Include="Lykke.Service.Assets.Client" Version="3.3.2" />
     <PackageReference Include="QBitNinja.Client" Version="1.0.3.46" />
   </ItemGroup>
 
