--- a/src/Lykke.Job.PayTransactionHandler/Lykke.Job.PayTransactionHandler.csproj
+++ b/src/Lykke.Job.PayTransactionHandler/Lykke.Job.PayTransactionHandler.csproj
@@ -22,23 +22,29 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
-    <PackageReference Include="Lykke.Common" Version="6.7.0" />
-    <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.7.0" />
+    <PackageReference Include="Lykke.Common" Version="6.8.1" />
+    <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.7.1" />
+    <PackageReference Include="Lykke.Cqrs" Version="4.5.0" />
     <PackageReference Include="Lykke.Job.EthereumCore.Contracts" Version="1.1.3" />
     <!-- #if azurequeuesub -->
     <PackageReference Include="Lykke.JobTriggers" Version="2.1.0" />
     <!-- #endif -->
-    <PackageReference Include="Lykke.Logs" Version="4.3.2" />
+    <PackageReference Include="Lykke.Logs" Version="4.3.3" />
+    <PackageReference Include="Lykke.Messaging" Version="5.0.0" />
+    <PackageReference Include="Lykke.Messaging.RabbitMq" Version="2.0.0" />
     <!-- #if rabbitpub -->
     <PackageReference Include="Lykke.RabbitMq.Azure" Version="5.0.1" />
     <!-- #endif -->
     <!-- #if rabbitpub || rabbitsub -->
     <PackageReference Include="Lykke.RabbitMqBroker" Version="7.0.0" />
     <PackageReference Include="Lykke.Service.Assets.Client" Version="3.3.2" />
-    <PackageReference Include="Lykke.Service.PayInternal.Contract" Version="1.0.27" />
+    <PackageReference Include="Lykke.Service.Operations.Client" Version="2.2.18" />
+    <PackageReference Include="Lykke.Service.Operations.Contracts" Version="1.0.1" />
+    <PackageReference Include="Lykke.Service.PayInternal.Client" Version="1.1.19" />
+    <PackageReference Include="Lykke.Service.PayInternal.Contract" Version="1.0.28" />
     <!-- #endif -->
     <PackageReference Include="Lykke.SettingsReader" Version="2.3.1" />
-    <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="2.0.2" />
+    <PackageReference Include="Lykke.SlackNotification.AzureQueue" Version="2.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.3" />
