--- a/src/Lykke.Job.PayTransactionHandler/Lykke.Job.PayTransactionHandler.csproj
+++ b/src/Lykke.Job.PayTransactionHandler/Lykke.Job.PayTransactionHandler.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Lykke.Common" Version="7.0.1" />
     <PackageReference Include="Lykke.Common.ApiLibrary" Version="1.9.0" />
+    <PackageReference Include="Lykke.Contracts" Version="1.0.51" />
     <PackageReference Include="Lykke.Job.EthereumCore.Contracts" Version="1.1.7" />
     <!-- #if azurequeuesub -->
     <PackageReference Include="Lykke.JobTriggers" Version="2.2.0" />
