changed connection strings

--- a/settings.yaml
+++ b/settings.yaml
@@ -27,7 +27,7 @@ PayTransactionHandlerJob:
       types: [ AzureTableStorage ]
   Rabbit:
     ConnectionString:
-      settings-key: LP-RabbitConnString
+      settings-key: RabbitPay
       types: [ RabbitMq ]
     WalletsExchangeName: pay.wallets
     TransactionsExchangeName: pay.transactionevents
@@ -57,8 +57,8 @@ SlackNotifications:
       types: [ AzureTableStorage ]
 Transports:
   ClientRabbitMqConnectionString:
-    settings-key: ClientRabbitMqConnectionString
+    settings-key: RabbitPay
     types: [ RabbitMq ]
   MeRabbitMqConnectionString:
-    settings-key: GeneralRabbitMqConnectionString
+    settings-key: RabbitME
     types: [ RabbitMq ]
